(executable
 (name node_wrapper)
 (link_deps
  (env_var WASM_ENGINE))
 (modules node_wrapper node_wrapper_per_engine)
 (libraries unix))

(rule
 (target node_wrapper_per_engine.ml)
 (action
  (with-stdout-to
   %{target}
   (run echo "let engine = \"%{env:WASM_ENGINE=node}\""))))

(executable
 (name quickjs_wrapper)
 (modules quickjs_wrapper)
 (libraries unix))

(executable
 (name ci_setup)
 (modules ci_setup ci_setup_config)
 (libraries opam-format re unix))

(rule
 (target ci_setup_config.ml)
 (enabled_if
  (not %{oxcaml_supported}))
 (action
  (copy ci_setup_config-mainstream.ml %{target})))

(rule
 (target ci_setup_config.ml)
 (enabled_if %{oxcaml_supported})
 (action
  (copy ci_setup_config-oxcaml.ml %{target})))

(executable
 (name sync_testsuite)
 (modules sync_testsuite)
 (libraries))
