(executable
 (name node_wrapper)
 (link_deps
  (env_var WASM_ENGINE))
 (modules node_wrapper node_wrapper_per_engine)
 (libraries unix))

(rule
 (target node_wrapper_per_engine.ml)
 (action
  (with-stdout-to
   %{target}
   (run echo "let engine = \"%{env:WASM_ENGINE=node}\""))))

(executable
 (name quickjs_wrapper)
 (modules quickjs_wrapper)
 (libraries unix))

(executable
 (name ci_setup)
 (modules ci_setup ci_setup_config_mainstream ci_setup_config_oxcaml)
 (libraries opam-format re unix))

(executable
 (name sync_testsuite)
 (modules sync_testsuite)
 (libraries))
