(executable
 (name jsoo_fs)
 (public_name jsoo_fs)
 (package js_of_ocaml-compiler)
 (libraries jsoo_cmdline js_of_ocaml-compiler cmdliner compiler-libs.common)
 (flags
  (:standard -safe-string)))

(rule
 (targets jsoo_fs.1)
 (action
  (with-stdout-to
   %{targets}
   (run %{bin:jsoo_fs} --help=groff))))

(install
 (section man)
 (package js_of_ocaml-compiler)
 (files jsoo_fs.1))
