(executable
 (name jsoo_link)
 (public_name jsoo_link)
 (package js_of_ocaml-compiler)
 (libraries jsoo_cmdline js_of_ocaml-compiler cmdliner compiler-libs.common)
 (flags
  (:standard -safe-string)))

(rule
 (targets jsoo_link.1)
 (action
  (with-stdout-to
   %{targets}
   (run %{bin:jsoo_link} --help=groff))))

(install
 (section man)
 (package js_of_ocaml-compiler)
 (files jsoo_link.1))
