(executable
 (name wasmoo_util)
 (public_name wasmoo_util)
 (package wasm_of_ocaml-compiler)
 (libraries wasm_of_ocaml-compiler jsoo_cmdline cmdliner))

(rule
 (targets wasmoo_util.1)
 (action
  (with-stdout-to
   %{targets}
   (run %{bin:wasmoo_util} --help=groff))))

(install
 (section man)
 (package wasm_of_ocaml-compiler)
 (files wasmoo_util.1))
