(library
 (name wasm_of_ocaml_compiler_dynlink)
 (public_name wasm_of_ocaml-compiler.dynlink-compiler)
 (library_flags (-linkall))
 (foreign_stubs
  (language c)
  (names stubs))
 (libraries
  wasm_of_ocaml-compiler
  js_of_ocaml-compiler
  js_of_ocaml-compiler.runtime
  wasm_of_ocaml-compiler.dynlink
  compiler-libs.bytecomp))
