(library
 (name js_of_ocaml_compiler)
 (public_name js_of_ocaml-compiler)
 (synopsis "Js_of_ocaml compiler library")
 (libraries
  compiler-libs.common
  compiler-libs.bytecomp
  menhirLib
  sedlex
  (select
   source_map_io.ml
   from
   (yojson -> source_map_io.yojson.ml)
   (-> source_map_io.unsupported.ml)))
 (flags
  (:standard -w -7-37 -safe-string))
 (preprocess
  (pps ppx_optcomp_light sedlex.ppx)))

(ocamllex annot_lexer)

(menhir
 (modules js_parser)
 (flags
  --table
  --external-tokens
  Js_token
  --explain
  --unused-token
  TAnnot
  --unused-token
  TComment
  --unused-token
  TCommentLineDirective
  --unused-token
  T_ERROR
  --unused-token
  T_AT))

(menhir
 (modules annot_parser)
 (flags --explain))

(include_subdirs unqualified)

(rule
 (targets compiler_version.ml)
 (deps
  (:input-file ../../version.ml.in))
 (action
  (copy %{input-file} %{targets})))
